@@ -42,10 +42,10 @@ $modversion = array(
 
 					/**  Development information */
 					'status_version'			=> "1.0",
-					'status'					=> "beta",
+					'status'					=> "RC",
 					'date'						=> "Unreleased",
 					'author_word'				=> "",
-					'warning'					=> _CO_ICMS_WARNING_BETA,
+					'warning'					=> _CO_ICMS_WARNING_RC,
 
 					/** Contributors */
 					'developer_website_url' 	=> "http://code.google.com/p/amaryllis-modules/",
